# cxp

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  index.md  integration.md
docs/catalogs/: index.md
docs/catalogs/interfaces/application/: asgi.md  http-framework.md  http.md  wsgi.md
docs/catalogs/interfaces/browser/: automation.md  playwright.md
docs/catalogs/interfaces/cache/: key-value.md
docs/catalogs/interfaces/cosecha/: engine.md  instrumentation.md  plugin.md  reporter.md  runtime.md
docs/catalogs/interfaces/database/: index.md  mongodb.md
docs/catalogs/interfaces/execution/: engine.md  plan-run.md
docs/catalogs/interfaces/identity/: auth-provider.md
docs/catalogs/interfaces/media/: video-streaming.md
docs/protocol/: capabilities.md  compliance.md  descriptors.md  errors.md  telemetry.md
examples/: async_provider.py  async_telemetry_stream.py  component_descriptors.py  high_fidelity_provider.py  mongodb_profiles.py  sync_provider.py
src/cxp/: __init__.py  _version.py  capabilities.py  compliance.py  contracts.py  descriptors.py  handshake.py  integration.py  provider.py  telemetry.py  types.py
src/cxp/catalogs/: __init__.py  base.py  common.py  inputs.py  results.py
tests/: conftest.py  test_api_surface.py  test_async_provider.py  test_browser_catalogs.py  test_capabilities_metadata.py  test_catalog_extensions.py  test_catalogs.py  test_compliance.py  test_cosecha_catalogs.py  test_coverage_completion.py  test_coverage_edges.py  test_descriptors.py  test_examples.py  test_execution_catalogs.py  test_handshake.py  test_http_application_catalogs.py  test_provider.py  test_public_exports.py  test_telemetry_catalogs.py
(+60 files in other folders)
